--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,5 @@ jobs:
 
       - name: Build Docker Containers
         run: |
-          docker-compose build
+          # Use 'docker compose' instead of 'docker-compose'
+          docker compose build
