--- a/movie-planner-frontend/nginx.conf
+++ b/movie-planner-frontend/nginx.conf
@@ -1,8 +1,16 @@
 server {
     listen 80;
+    
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+    }
+
+    # Cache static assets like JS and CSS for better performance
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
