--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: ./movie-planner-backend/package-lock.json
 
       # Pre-build check: Ensure backend at least installs correctly
       - name: Install Backend Dependencies
