--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-# This must be at the top level (zero indentation)
 on:
   push:
     branches: [ main ]
@@ -18,18 +17,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: ./movie-planner-backend/package-lock.json
+      # 1. Setup QEMU (Allows building for different architectures)
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      # Pre-build check: Ensure backend at least installs correctly
-      - name: Install Backend Dependencies
-        run: |
-          cd movie-planner-backend
-          npm install
+      # 2. Setup Buildx (The engine that creates multi-arch images)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -38,22 +32,29 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push
+      # Lowercase the repository owner name for Docker tags
+      - name: Set Repo Owner Env
         run: |
-          # Lowercase the username to avoid Docker tagging errors
-          REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          
-          BACKEND_IMAGE=ghcr.io/$REPO_LOWER/movie-backend:latest
-          FRONTEND_IMAGE=ghcr.io/$REPO_LOWER/movie-frontend:latest
-          
-          # Build Backend
-          docker build -t $BACKEND_IMAGE ./movie-planner-backend
-          
-          # Build Frontend (injecting the API URL secret)
-          docker build -t $FRONTEND_IMAGE \
-            --build-arg REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} \
-            ./movie-planner-frontend
-            
-          # Push to GHCR
-          docker push $BACKEND_IMAGE
-          docker push $FRONTEND_IMAGE
+          echo "REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      # 3. Build & Push Backend
+      - name: Build and Push Backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./movie-planner-backend
+          # Support both standard PCs and Apple Silicon/ARM
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ghcr.io/${{ env.REPO_LOWER }}/movie-backend:latest
+
+      # 4. Build & Push Frontend
+      - name: Build and Push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./movie-planner-frontend
+          # Support both standard PCs and Apple Silicon/ARM
+          platforms: linux/amd64,linux/arm64
+          push: true
+          build-args: |
+            REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}
+          tags: ghcr.io/${{ env.REPO_LOWER }}/movie-frontend:latest
