--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,18 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # 1. Setup QEMU (Allows building for different architectures)
+      # 1. Setup QEMU (Emulation support)
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      # 2. Setup Buildx (The engine that creates multi-arch images)
+      # 2. Setup Buildx (The advanced builder)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      # 3. FIX: Use the newer binfmt handler to stop "Illegal instruction" errors
+      - name: Install QEMU Handlers
+        run: |
+          docker run --rm --privileged tonistiigi/binfmt --install all
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -32,27 +37,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Lowercase the repository owner name for Docker tags
+      # Create an environment variable with the lowercased username
       - name: Set Repo Owner Env
         run: |
           echo "REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      # 3. Build & Push Backend
+      # 4. Build & Push Backend
       - name: Build and Push Backend
         uses: docker/build-push-action@v5
         with:
           context: ./movie-planner-backend
-          # Support both standard PCs and Apple Silicon/ARM
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/${{ env.REPO_LOWER }}/movie-backend:latest
 
-      # 4. Build & Push Frontend
+      # 5. Build & Push Frontend
       - name: Build and Push Frontend
         uses: docker/build-push-action@v5
         with:
           context: ./movie-planner-frontend
-          # Support both standard PCs and Apple Silicon/ARM
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
