--- a/movie-planner-backend/Dockerfile
+++ b/movie-planner-backend/Dockerfile
@@ -1,18 +1,18 @@
-# 1. Use a lightweight Node.js image
-FROM node:20-alpine
+# Use BUILDPLATFORM to run npm install on the runner's native CPU (fast)
+FROM --platform=$BUILDPLATFORM node:20-alpine AS builder
 
-# 2. Set the directory inside the container
 WORKDIR /app
-
-# 3. Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install --production
+# Install dependencies natively
+RUN npm install
 
-# 4. Copy the rest of your source code
 COPY . .
 
-# 5. Expose the port your Express app runs on
-EXPOSE 5000
+# Final stage: Use TARGETPLATFORM for the actual running image
+FROM node:20-alpine
+WORKDIR /app
+# Copy the node_modules built in the previous step
+COPY --from=builder /app /app
 
-# 6. Command to start the server
+EXPOSE 8080
 CMD ["node", "server.js"]
