--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,14 +42,28 @@ jobs:
           echo "REPO_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       # 4. Build & Push Backend
-      - name: Build and Push Backend
+      # 4.1 Build and Test Backend Locally
+      - name: Build Backend for Testing
+        uses: docker/build-push-action@v5
+        with:
+          context: ./movie-planner-backend
+          load: true # This loads the image into the local runner
+          tags: backend-test:latest
+
+      - name: Run Backend Health Check
+        run: |
+          docker run -d --name test-api -p 8080:8080 backend-test:latest
+          # Wait for the container to become healthy
+          timeout 60s sh -c 'until [ "$(docker inspect -f {{.State.Health.Status}} test-api)" == "healthy" ]; do sleep 2; done'
+          docker stop test-api && docker rm test-api
+
+      # 4.2 Push Backend (Only if health check passed)
+      - name: Push Backend to GHCR
         uses: docker/build-push-action@v5
         with:
           context: ./movie-planner-backend
           platforms: linux/amd64,linux/arm64
           push: true
-          build-args: |
-            QEMU_CPU=max
           tags: ghcr.io/${{ env.REPO_LOWER }}/movie-backend:latest
 
       # 5. Build & Push Frontend
@@ -60,7 +74,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
-            REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}
+            # Ensure this secret is set to http://your-domain.com/api 
+            # OR hardcode a fallback if you want a 'sane default'
+            VITE_API_URL=${{ secrets.VITE_API_URL || 'http://localhost:8080/api' }}
             QEMU_CPU=max
           tags: ghcr.io/${{ env.REPO_LOWER }}/movie-frontend:latest
 
