--- a/movie-planner-frontend/Dockerfile
+++ b/movie-planner-frontend/Dockerfile
@@ -1,20 +1,21 @@
-# Stage 1: Build
-FROM node:20-alpine as build
+# Step 1: Build the app
+FROM node:20-alpine AS build
+
+# Accept the API URL as a build argument
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 WORKDIR /app
-
-ARG REACT_APP_API_BASE_URL
-ENV REACT_APP_API_BASE_URL=$REACT_APP_API_BASE_URL
-
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Production
+# Step 2: Serve the app with Nginx
 FROM nginx:stable-alpine
-# Copy the custom config we just made
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-# Copy the build artifacts (Use /app/dist for Vite or /app/build for CRA)
+# Copy the built files from the build stage to Nginx
 COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy a custom nginx config if you have one, or use default
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
