--- a/movie-planner-backend/Dockerfile
+++ b/movie-planner-backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:20-alpine AS builder
+RUN apk add --no-cache curl
 
 WORKDIR /app
 COPY package*.json ./
@@ -16,5 +17,6 @@ COPY --from=builder /app /app
 EXPOSE 8080
 CMD ["node", "server.js"]
 
-HEALTHCHECK --interval=5s --timeout=3s --retries=3 \
-  CMD curl -f http://localhost:8080/api/health || exit 1
+# Pings the health route every 10 seconds
+HEALTHCHECK --interval=10s --timeout=5s --retries=3 \
+  CMD node -e "fetch('http://localhost:8080/api/health').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))"
