--- a/movie-planner-frontend/Dockerfile
+++ b/movie-planner-frontend/Dockerfile
@@ -19,3 +19,7 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Copy a custom nginx config if you have one, or use default
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
+# Standard Nginx health check using wget
+HEALTHCHECK --interval=10s --timeout=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
