--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       dockerfile: Dockerfile
     image: ghcr.io/joshpls/movie-frontend:latest
     ports:
-      - "${FRONTEND_PORT:-3000}:${FRONTEND_PORT:-3000}"
+      - "${FRONTEND_PORT:-3000}:80"
     environment:
       - VITE_API_URL=${VITE_API_URL:-http://localhost:8080/api}
     restart: unless-stopped
