--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - PORT=${BACKEND_PORT:-8080}
+      - TMS_API_KEY=${TMS_API_KEY}
     restart: unless-stopped
 
   frontend:
@@ -19,7 +20,7 @@ services:
       dockerfile: Dockerfile
     image: ghcr.io/joshpls/movie-frontend:latest
     ports:
-      - "${FRONTEND_PORT:-3000}:80"
+      - "${FRONTEND_PORT:-3000}:${FRONTEND_PORT:-80}"
     environment:
       - VITE_API_URL=${VITE_API_URL:-http://localhost:8080/api}
     restart: unless-stopped
