--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,7 @@ jobs:
         with:
           context: ./movie-planner-backend
           platforms: linux/amd64,linux/arm64
+          provenance: false
           push: true
           build-args: |
             QEMU_CPU=max
