--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "movie-planner-double-feature",
   "private": true,
   "scripts": {
-    "dev": "docker compose up --build",
+    "dev": "docker compose up -d",
+    "build": "docker-compose build --no-cache",
     "stop": "docker compose down",
     "prod-test": "docker compose -f docker-compose.yml pull && docker compose -f docker-compose.yml up -d",
     "clean": "docker system prune -f"
