--- a/movie-planner-frontend/Dockerfile
+++ b/movie-planner-frontend/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+# RUN npm run build
 
 # Step 2: Serve the app with Nginx
 FROM nginx:stable-alpine
